--- a/toybox/index.html
+++ b/toybox/index.html
@@ -165,7 +165,7 @@
                                 <p>폰꾸용품 총집합!</p>
                             </div>
                         </a></div>
-                    <div class="swiper-slide four"><a href="#">
+                    <div class="swiper-slide four" data-index="4"><a href="#">
                             <div class="inner"><span>BRAND WEEK<br>토이박스 X 몰랑이 </span>
                                 <p>내 장바구니에 쏙 들어온 몰랑이</p>
                             </div>
