--- a/about.html
+++ b/about.html
@@ -144,46 +144,47 @@
                 <div class="workli item1">
                     <div class="top">
                         <div class="txt">
-                            <h4>TGIF</h4>
+                            <h4>굿굿마켓</h4>
                             <div class="sub">
-                                <p>2025.02-2025.03</p>
-                                <span>Website Renewal</span>
+                                <p>2025.05-2025.06</p>
+                                <span>Team Project</span>
                             </div>
                         </div>
                         <div class="button">
                             <div class="view">VIEW <div class="img"></div>
                             </div>
                             <div class="buttons">
-                                <a href="tgif/index.html" target="_blank">SITE</a>
-                                <a
-                                    href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1416%3A129&node-id=1473-2039&viewport=371%2C350%2C0.1&t=ojFqRGxm4izmgZAd-1&scaling=min-zoom&content-scaling=fixed">DETAILS</a>
+                                <a href="https://www.figma.com/deck/eWEIFUyNxV3alZPikjUe8A/-%ED%8C%80%ED%94%8C2-3%EC%A1%B0--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_%EA%B5%BFx%EA%B5%BF--GoodxGoods-Market-%EA%B5%BF%EA%B5%BF%EB%A7%88%EC%BC%93-?node-id=4004-372&viewport=-148%2C-157%2C0.72&t=yAz9zHAKSsvyLrui-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"
+                                    target="_blank">DETAILS</a>
+                                <a href="https://goodgoodsmarket.vercel.app/" target="_blank">SITE</a>
                             </div>
                         </div><!-- button -->
                     </div>
                     <div class="bottom_img">
-                        <img src="img/about/slide2.jpg" alt="tgif">
+                        <img src="img/about/slide5.png" alt="SCENEHOUSE">
                     </div>
                 </div><!-- item1 -->
                 <div class="workli item2">
                     <div class="top">
                         <div class="txt">
-                            <h4>TOYBOX</h4>
+                            <h4>SCENEHOUSE</h4>
                             <div class="sub">
-                                <p>2025.01-2025.02</p>
-                                <span>Website</span>
-                            </div><!-- txt -->
+                                <p>2025.04-2025.05</p>
+                                <span>Team Project</span>
+                            </div>
                         </div>
                         <div class="button">
                             <div class="view">VIEW <div class="img"></div>
                             </div>
                             <div class="buttons">
-                                <a href="toybox/index.html" target="_blank">SITE</a>
-                                <a href="#">DETAILS</a>
+                                <a href="https://www.figma.com/deck/5F9WtyJEV1KkksXuIl7AbQ/-%ED%8C%80%ED%94%8C1-4%EC%A1%B0--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_%EC%94%AC%ED%95%98%EC%9A%B0%EC%8A%A4-SceneHouse---Copy-?node-id=1-771&viewport=-156%2C-159%2C0.73&t=1NZO7MNW5w5OlMoU-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"
+                                    target="_blank">DETAILS</a>
+                                <a href="http://yeskkimseul.github.io/scene-house/" target="_blank">SITE</a>
                             </div>
                         </div><!-- button -->
-                    </div><!-- top -->
+                    </div>
                     <div class="bottom_img">
-                        <img src="img/about/slide1.jpg" alt="toybox">
+                        <img src="img/about/slide4.png" alt="SCENEHOUSE">
                     </div>
                 </div><!-- item2 -->
                 <div class="workli item3">
@@ -199,10 +200,10 @@
                             <div class="view">VIEW <div class="img"></div>
                             </div>
                             <div class="buttons">
+                                <a href="https://www.figma.com/deck/0JDY2I1XbtbJuOkgjbKcyQ/-%EB%AF%B8%EB%8B%881--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_3%EC%A7%80%EB%A7%9D%EC%A1%B0--VOCAPET-%EB%B3%B4%EC%B9%B4%ED%8E%AB---Copy-?node-id=107-3706&viewport=-156%2C-159%2C0.73&t=ZXB2V2xc0wtAyNJL-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"
+                                    target="_blank">DETAILS</a>
                                 <a href="https://www.figma.com/proto/8xpkwAiN4FRM8CcweofcvF/1%EC%A1%B0-Vocapet-3%EC%A7%80%EB%A7%9D%EC%A1%B0-?page-id=2581%3A63422&node-id=2581-63423&p=f&viewport=365%2C115%2C0.04&t=pJswVDsbTdhpXrUY-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=2581%3A63423&show-proto-sidebar=1"
                                     target="_blank">SITE</a>
-                                <a
-                                    href="https://www.figma.com/deck/0JDY2I1XbtbJuOkgjbKcyQ/-%EB%AF%B8%EB%8B%881--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_3%EC%A7%80%EB%A7%9D%EC%A1%B0--VOCAPET-%EB%B3%B4%EC%B9%B4%ED%8E%AB---Copy-?node-id=107-3706&viewport=-156%2C-159%2C0.73&t=ZXB2V2xc0wtAyNJL-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1">DETAILS</a>
                             </div>
                         </div><!-- button -->
                     </div>
@@ -213,29 +214,78 @@
                 <div class="workli item4">
                     <div class="top">
                         <div class="txt">
-                            <h4>SCENEHOUSE</h4>
+                            <h4>CASHARY</h4>
                             <div class="sub">
-                                <p>2025.04-2025.05</p>
-                                <span>Team Project</span>
+                                <p>2025.05-2025.06</p>
+                                <span>MOBILE</span>
                             </div>
                         </div>
                         <div class="button">
                             <div class="view">VIEW <div class="img"></div>
                             </div>
                             <div class="buttons">
-                                <a href="http://yeskkimseul.github.io/scene-house/" target="_blank">SITE</a>
-                                <a href="https://www.figma.com/deck/5F9WtyJEV1KkksXuIl7AbQ/-%ED%8C%80%ED%94%8C1-4%EC%A1%B0--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_%EC%94%AC%ED%95%98%EC%9A%B0%EC%8A%A4-SceneHouse---Copy-?node-id=1-771&viewport=-156%2C-159%2C0.73&t=1NZO7MNW5w5OlMoU-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1">DETAILS</a>
+                                <a
+                                    href="#">DETAILS</a>
+                                <a href="#" target="_blank">SITE</a>
                             </div>
                         </div><!-- button -->
                     </div>
                     <div class="bottom_img">
-                        <img src="img/about/slide7.jpg" alt="company">
+                        <img src="img/about/slide6.png" alt="tgif">
                     </div>
                 </div><!-- item4 -->
+                <div class="workli item5">
+                    <div class="top">
+                        <div class="txt">
+                            <h4>TGIF</h4>
+                            <div class="sub">
+                                <p>2025.02-2025.03</p>
+                                <span>Website Renewal</span>
+                            </div>
+                        </div>
+                        <div class="button">
+                            <div class="view">VIEW <div class="img"></div>
+                            </div>
+                            <div class="buttons">
+                                <a
+                                    href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1416%3A129&node-id=1473-2039&viewport=371%2C350%2C0.1&t=ojFqRGxm4izmgZAd-1&scaling=min-zoom&content-scaling=fixed">DETAILS</a>
+                                <a href="tgif/index.html" target="_blank">SITE</a>
+                            </div>
+                        </div><!-- button -->
+                    </div>
+                    <div class="bottom_img">
+                        <img src="img/about/slide2.png" alt="tgif">
+                    </div>
+                </div><!-- item5 -->
+                <div class="workli item2">
+                    <div class="top">
+                        <div class="txt">
+                            <h4>TOYBOX</h4>
+                            <div class="sub">
+                                <p>2025.01-2025.02</p>
+                                <span>Website</span>
+                            </div><!-- txt -->
+                        </div>
+                        <div class="button">
+                            <div class="view">VIEW <div class="img"></div>
+                            </div>
+                            <div class="buttons">
+                                <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1416%3A129&node-id=1667-5567&viewport=-2700%2C-1161%2C0.22&t=WltXjw7GfEVn4BUU-1&scaling=min-zoom&content-scaling=fixed"
+                                    target="_blank">DETAILS</a>
+                                <a href="toybox/index.html" target="_blank">SITE</a>
+                            </div>
+                        </div><!-- button -->
+                    </div><!-- top -->
+                    <div class="bottom_img">
+                        <img src="img/about/slide1.jpg" alt="toybox">
+                    </div>
+                </div><!-- item2 -->
+
+
                 <div class="workli item4">
                     <div class="top">
                         <div class="txt">
-                            <h4>COMPANY</h4>
+                            <h4>한국습지학회</h4>
                             <div class="sub">
                                 <p>2025.04</p>
                                 <span>Website Renewal</span>
@@ -249,7 +299,7 @@
                         <img src="img/about/slide7.jpg" alt="company">
                     </div>
                 </div><!-- item5 -->
-                <div class="workli item4">
+                <!--           <div class="workli item4">
                     <div class="top">
                         <div class="txt">
                             <h4>COSMETIC</h4>
@@ -260,12 +310,12 @@
                         </div>
                         <div class="button">
                             <a href="cosmetic/index.html" target="_blank" class="button2">SITE</a>
-                        </div><!-- button -->
+                        </div>
                     </div>
                     <div class="bottom_img">
                         <img src="img/about/slide7.jpg" alt="company">
                     </div>
-                </div><!-- item6 -->
+                </div> -->
             </div><!-- list -->
         </section><!-- work -->
         <section id="about" data-scroll-section>
