--- a/about.html
+++ b/about.html
@@ -232,7 +232,29 @@
                         <img src="img/about/slide7.jpg" alt="company">
                     </div>
                 </div><!-- item4 -->
-                <div class="workli item4">
+                   <div class="workli item5">
+                    <div class="top">
+                        <div class="txt">
+                            <h4>SCENEHOUSE</h4>
+                            <div class="sub">
+                                <p>2025.04-2025.05</p>
+                                <span>Team Project</span>
+                            </div>
+                        </div>
+                        <div class="button">
+                            <div class="view">VIEW <div class="img"></div>
+                            </div>
+                            <div class="buttons">
+                                <a href="http://yeskkimseul.github.io/scene-house/" target="_blank">SITE</a>
+                                <a href="https://www.figma.com/deck/5F9WtyJEV1KkksXuIl7AbQ/-%ED%8C%80%ED%94%8C1-4%EC%A1%B0--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_%EC%94%AC%ED%95%98%EC%9A%B0%EC%8A%A4-SceneHouse---Copy-?node-id=1-771&viewport=-156%2C-159%2C0.73&t=1NZO7MNW5w5OlMoU-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1">DETAILS</a>
+                            </div>
+                        </div><!-- button -->
+                    </div>
+                    <div class="bottom_img">
+                        <img src="img/about/slide7.jpg" alt="company">
+                    </div>
+                </div><!-- item4 -->
+                <div class="workli item6">
                     <div class="top">
                         <div class="txt">
                             <h4>COMPANY</h4>
@@ -249,7 +271,7 @@
                         <img src="img/about/slide7.jpg" alt="company">
                     </div>
                 </div><!-- item5 -->
-                <div class="workli item4">
+                <div class="workli item7">
                     <div class="top">
                         <div class="txt">
                             <h4>COSMETIC</h4>
