--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
                                 <a href="https://www.figma.com/deck/0JDY2I1XbtbJuOkgjbKcyQ/-%EB%AF%B8%EB%8B%881--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_3%EC%A7%80%EB%A7%9D%EC%A1%B0--VOCAPET-%EB%B3%B4%EC%B9%B4%ED%8E%AB---Copy-?node-id=107-3706&viewport=-156%2C-159%2C0.73&t=ZXB2V2xc0wtAyNJL-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"
                                     target="_blank">DETAILS</a>
                                 <a href="https://www.figma.com/proto/8xpkwAiN4FRM8CcweofcvF/1%EC%A1%B0-Vocapet-3%EC%A7%80%EB%A7%9D%EC%A1%B0-?page-id=2581%3A63422&node-id=2581-63423&p=f&viewport=365%2C115%2C0.04&t=pJswVDsbTdhpXrUY-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=2581%3A63423&show-proto-sidebar=1"
-                                    target="_blank">SITE</a>
+                                    target="_blank">PROTO</a>
                             </div>
                         </div><!-- button -->
                     </div>
@@ -226,7 +226,7 @@
                             <div class="buttons">
                                 <a
                                     href="#">DETAILS</a>
-                                <a href="#" target="_blank">SITE</a>
+                                <a href="#" target="_blank">PROTO</a>
                             </div>
                         </div><!-- button -->
                     </div>
