--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
                         <img src="img/about/slide5.png" alt="SCENEHOUSE">
                     </div>
                 </div><!-- item1 -->
-                <div class="workli item2">
+                <!-- <div class="workli item2">
                     <div class="top">
                         <div class="txt">
                             <h4>SCENEHOUSE</h4>
@@ -181,12 +181,12 @@
                                     target="_blank">DETAILS</a>
                                 <a href="http://yeskkimseul.github.io/scene-house/" target="_blank">SITE</a>
                             </div>
-                        </div><!-- button -->
+                        </div>
                     </div>
                     <div class="bottom_img">
                         <img src="img/about/slide4.png" alt="SCENEHOUSE">
                     </div>
-                </div><!-- item2 -->
+                </div> -->
                 <div class="workli item3">
                     <div class="top">
                         <div class="txt">
@@ -223,12 +223,16 @@
                         <div class="button">
                             <div class="view">VIEW <div class="img"></div>
                             </div>
-                            <div class="buttons">
+                            <div class="button">
+                                <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1650%3A22354&node-id=1737-8755&viewport=1536%2C490%2C0.45&t=d7P2ItOhKXO9Sexh-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1737%3A8755" target="_blank" class="button2">PROTO</a>
+                            </div><!-- button -->
+                        </div>
+                        <!--       <div class="buttons">
                                 <a
                                     href="#">DETAILS</a>
                                 <a href="#" target="_blank">PROTO</a>
                             </div>
-                        </div><!-- button -->
+                        </div> --><!-- button -->
                     </div>
                     <div class="bottom_img">
                         <img src="img/about/slide6.png" alt="tgif">
