--- a/about.html
+++ b/about.html
@@ -221,12 +221,12 @@
                             </div>
                         </div>
                         <div class="button">
+                            <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1650%3A22354&node-id=1737-8755&viewport=1536%2C490%2C0.45&t=d7P2ItOhKXO9Sexh-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1737%3A8755" target="_blank" class="button2">PROTO</a>
+                        </div><!-- button -->
+                        <!-- <div class="button">
                             <div class="view">VIEW <div class="img"></div>
                             </div>
-                            <div class="button">
-                                <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1650%3A22354&node-id=1737-8755&viewport=1536%2C490%2C0.45&t=d7P2ItOhKXO9Sexh-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1737%3A8755" target="_blank" class="button2">PROTO</a>
-                            </div><!-- button -->
-                        </div>
+                        </div> -->
                         <!--       <div class="buttons">
                                 <a
                                     href="#">DETAILS</a>
