--- a/about.html
+++ b/about.html
@@ -252,7 +252,7 @@
                             </div>
                             <div class="buttons">
                                 <a
-                                    href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1416%3A129&node-id=1473-2039&viewport=371%2C350%2C0.1&t=ojFqRGxm4izmgZAd-1&scaling=min-zoom&content-scaling=fixed">DETAILS</a>
+                                    href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1416%3A129&node-id=1473-2039&viewport=371%2C350%2C0.1&t=ojFqRGxm4izmgZAd-1&scaling=min-zoom&content-scaling=fixed" target="_blank">DETAILS</a>
                                 <a href="tgif/index.html" target="_blank">SITE</a>
                             </div>
                         </div><!-- button -->
