--- a/about.html
+++ b/about.html
@@ -77,12 +77,12 @@
             <div class="skill">
                 <h5>skill</h5>
                 <ul class="design">
-                    <li><img src="./img/about/figma.svg" alt="Figma"></li>
-                    <li><img src="./img/about/Photoshop.svg" alt="Photoshop"></li>
-                    <li><img src="./img/about/Illustrator.svg" alt="Illustrator"></li>
-                    <li><img src="./img/about/html.svg" alt="html"></li>
-                    <li><img src="./img/about/css.svg" alt="css"></li>
-                    <li><img src="./img/about/js.svg" alt="js"></li>
+                    <li><img src="./img/about/figma2.svg" alt="Figma"></li>
+                    <li><img src="./img/about/Photoshop2.svg" alt="Photoshop"></li>
+                    <li><img src="./img/about/Illustrator2.svg" alt="Illustrator"></li>
+                    <li><img src="./img/about/html2.svg" alt="html"></li>
+                    <li><img src="./img/about/css2.svg" alt="css"></li>
+                    <li><img src="./img/about/js2.svg" alt="js"></li>
                 </ul>
                 <ul class="dev">
 
@@ -368,12 +368,14 @@
                         be able to return safely to the galaxy...</p>
                     <h3>contact</h3>
                     <div class="cont">
-                        <div class="name">
-                            <h5>KIMYESEUL</h5>
-                            <h6>ARTIST</h6>
+                        <div class="kakao">
+                            <a target="_blank" href="https://open.kakao.com/o/sFoENHCh">
+                            <h5>kakaotalk</h5>
+                            </a>
+                            <h6>MESSINGER</h6>
                         </div>
                         <div class="mail">
-                            <a href="mailto:kimyeaseuld@gmail.com">
+                            <a target="_blank" href="mailto:kimyeaseuld@gmail.com">
                                 <h5>yeseulkimd@gmail.com</h5>
                             </a>
                             <h6>MAIL</h6>
