--- a/tgif/index.html
+++ b/tgif/index.html
@@ -298,7 +298,7 @@
                     <input type="text" placeholder="매장명 혹은 주소를 입력해주세요">
                     <a href="#"><img src="asset/main/search.png" alt="search"></a>
                 </div><!-- search -->
-                <a href="#" class="button"><span>ALL STORE</span><img src="asset/main/arrow-right_store.png"
+                <a href="./store.html" class="button"><span>ALL STORE</span><img src="asset/main/arrow-right_store.png"
                         alt="To store page"></a>
             </div><!-- store_search -->
             <div class="map">
