--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
                             <div class="view">VIEW <div class="img"></div>
                             </div>
                             <div class="buttons">
-                                <a href="https://www.figma.com/deck/eWEIFUyNxV3alZPikjUe8A/-%ED%8C%80%ED%94%8C2-3%EC%A1%B0--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_%EA%B5%BFx%EA%B5%BF--GoodxGoods-Market-%EA%B5%BF%EA%B5%BF%EB%A7%88%EC%BC%93-?node-id=4004-372&viewport=-148%2C-157%2C0.72&t=yAz9zHAKSsvyLrui-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"
+                                <a href="https://www.figma.com/slides/3H11nlLWa6kJhnMLxgKSw0/-%ED%8C%80%ED%94%8C2-3%EC%A1%B0--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_%EA%B5%BFx%EA%B5%BF--GoodxGoods-Market-%EA%B5%BF%EA%B5%BF%EB%A7%88%EC%BC%93-?node-id=4004-372&t=4E17b29qADEdzvyP-1"
                                     target="_blank">DETAILS</a>
                                 <a href="https://goodgoodsmarket.vercel.app/" target="_blank">SITE</a>
                             </div>
@@ -200,9 +200,9 @@
                             <div class="view">VIEW <div class="img"></div>
                             </div>
                             <div class="buttons">
-                                <a href="https://www.figma.com/deck/0JDY2I1XbtbJuOkgjbKcyQ/-%EB%AF%B8%EB%8B%881--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_3%EC%A7%80%EB%A7%9D%EC%A1%B0--VOCAPET-%EB%B3%B4%EC%B9%B4%ED%8E%AB---Copy-?node-id=107-3706&viewport=-156%2C-159%2C0.73&t=ZXB2V2xc0wtAyNJL-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"
+                                <a href="https://www.figma.com/slides/WzTVQF7m7mhtnab0IqhQQS/-%EB%AF%B8%EB%8B%881--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_3%EC%A7%80%EB%A7%9D%EC%A1%B0--VOCAPET-%EB%B3%B4%EC%B9%B4%ED%8E%AB-?node-id=107-3706&t=lIBxebCyrDeGpdUj-1"
                                     target="_blank">DETAILS</a>
-                                <a href="https://www.figma.com/proto/8xpkwAiN4FRM8CcweofcvF/1%EC%A1%B0-Vocapet-3%EC%A7%80%EB%A7%9D%EC%A1%B0-?page-id=2581%3A63422&node-id=2581-63423&p=f&viewport=365%2C115%2C0.04&t=pJswVDsbTdhpXrUY-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=2581%3A63423&show-proto-sidebar=1"
+                                <a href="https://www.figma.com/proto/6cInFCbYi0O3xEiCH09Ygr/1%EC%A1%B0-Vocapet-3%EC%A7%80%EB%A7%9D%EC%A1%B0-?page-id=2581%3A63422&node-id=2581-63423&viewport=753%2C895%2C0.3&t=82a41RI0nmyDjEOa-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=2581%3A63423"
                                     target="_blank">PROTO</a>
                             </div>
                         </div><!-- button -->
@@ -221,7 +221,7 @@
                             </div>
                         </div>
                         <div class="button">
-                            <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1650%3A22354&node-id=1737-8755&viewport=1536%2C490%2C0.45&t=d7P2ItOhKXO9Sexh-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1737%3A8755" target="_blank" class="button2">PROTO</a>
+                            <a href="https://www.figma.com/proto/7iXZ6VtcBgpdLvAayFz7iG/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1650%3A22354&node-id=3015-21052&viewport=1918%2C407%2C0.63&t=CVxI1oXGCOZOzoG4-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=3015%3A21052" target="_blank" class="button2">PROTO</a>
                         </div><!-- button -->
                         <!-- <div class="button">
                             <div class="view">VIEW <div class="img"></div>
@@ -243,7 +243,7 @@
                         <div class="txt">
                             <h4>TGIF</h4>
                             <div class="sub">
-                                <p>2025.02-2025.03</p>
+                                <p>2025.03-2025.04</p>
                                 <span>Website Renewal</span>
                             </div>
                         </div>
@@ -252,7 +252,7 @@
                             </div>
                             <div class="buttons">
                                 <a
-                                    href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1416%3A129&node-id=1473-2039&viewport=371%2C350%2C0.1&t=ojFqRGxm4izmgZAd-1&scaling=min-zoom&content-scaling=fixed" target="_blank">DETAILS</a>
+                                    href="https://www.figma.com/proto/7iXZ6VtcBgpdLvAayFz7iG/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=3015%3A18882&node-id=3015-18885&viewport=699%2C60%2C0.03&t=KbO3QS6igaOq7Mn8-1&scaling=min-zoom&content-scaling=fixed" target="_blank">DETAILS</a>
                                 <a href="tgif/index.html" target="_blank">SITE</a>
                             </div>
                         </div><!-- button -->
@@ -274,7 +274,7 @@
                             <div class="view">VIEW <div class="img"></div>
                             </div>
                             <div class="buttons">
-                                <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1416%3A129&node-id=1667-5567&viewport=-2700%2C-1161%2C0.22&t=WltXjw7GfEVn4BUU-1&scaling=min-zoom&content-scaling=fixed"
+                                <a href="https://www.figma.com/proto/7iXZ6VtcBgpdLvAayFz7iG/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=3015%3A19733&node-id=3015-19736&viewport=672%2C60%2C0.06&t=XgxqTx8ONNGKU3Bg-1&scaling=min-zoom&content-scaling=fixed"
                                     target="_blank">DETAILS</a>
                                 <a href="toybox/index.html" target="_blank">SITE</a>
                             </div>
@@ -291,7 +291,7 @@
                         <div class="txt">
                             <h4>한국습지학회</h4>
                             <div class="sub">
-                                <p>2025.04</p>
+                                <p>2025.04-2025.05</p>
                                 <span>Website Renewal</span>
                             </div>
                         </div>
