--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
                             <div class="view">VIEW <div class="img"></div>
                             </div>
                             <div class="buttons">
-                                <a href="https://www.figma.com/slides/3H11nlLWa6kJhnMLxgKSw0/-%ED%8C%80%ED%94%8C2-3%EC%A1%B0--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_%EA%B5%BFx%EA%B5%BF--GoodxGoods-Market-%EA%B5%BF%EA%B5%BF%EB%A7%88%EC%BC%93-?node-id=4004-372&t=4E17b29qADEdzvyP-1"
+                                <a href="https://www.figma.com/deck/3H11nlLWa6kJhnMLxgKSw0/-%ED%8C%80%ED%94%8C2-3%EC%A1%B0--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_%EA%B5%BFx%EA%B5%BF--GoodxGoods-Market-%EA%B5%BF%EA%B5%BF%EB%A7%88%EC%BC%93-?node-id=4004-372&viewport=-148%2C-157%2C0.72&t=7bNl2HIY3FNuMAR5-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"
                                     target="_blank">DETAILS</a>
                                 <a href="https://goodgoodsmarket.vercel.app/" target="_blank">SITE</a>
                             </div>
@@ -221,7 +221,7 @@
                             </div>
                         </div>
                         <div class="button">
-                            <a href="https://www.figma.com/proto/7iXZ6VtcBgpdLvAayFz7iG/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1650%3A22354&node-id=3015-21052&viewport=1918%2C407%2C0.63&t=CVxI1oXGCOZOzoG4-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=3015%3A21052" target="_blank" class="button2">PROTO</a>
+                            <a href="https://www.figma.com/proto/7iXZ6VtcBgpdLvAayFz7iG/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1650%3A22354&node-id=3015-21052&viewport=907%2C460%2C0.22&t=kThnUbnD8NvJ2S3k-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=3015%3A21052" target="_blank" class="button2">PROTO</a>
                         </div><!-- button -->
                         <!-- <div class="button">
                             <div class="view">VIEW <div class="img"></div>
