--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
                             <div class="view">VIEW <div class="img"></div>
                             </div>
                             <div class="buttons">
-                                <a href="https://www.figma.com/slides/WzTVQF7m7mhtnab0IqhQQS/-%EB%AF%B8%EB%8B%881--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_3%EC%A7%80%EB%A7%9D%EC%A1%B0--VOCAPET-%EB%B3%B4%EC%B9%B4%ED%8E%AB-?node-id=107-3706&t=lIBxebCyrDeGpdUj-1"
+                                <a href="https://www.figma.com/deck/WzTVQF7m7mhtnab0IqhQQS/-%EB%AF%B8%EB%8B%881--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_3%EC%A7%80%EB%A7%9D%EC%A1%B0--VOCAPET-%EB%B3%B4%EC%B9%B4%ED%8E%AB-?node-id=107-3706&viewport=-148%2C-157%2C0.72&t=LiJCxRzGHDr9L67I-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"
                                     target="_blank">DETAILS</a>
                                 <a href="https://www.figma.com/proto/6cInFCbYi0O3xEiCH09Ygr/1%EC%A1%B0-Vocapet-3%EC%A7%80%EB%A7%9D%EC%A1%B0-?page-id=2581%3A63422&node-id=2581-63423&viewport=753%2C895%2C0.3&t=82a41RI0nmyDjEOa-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=2581%3A63423"
                                     target="_blank">PROTO</a>
