--- a/about.html
+++ b/about.html
@@ -6,7 +6,10 @@
     <meta name="description" content="portfolio">
     <meta name="keywords" content="UXUI,HTML,CSS,JS">
     <meta name="author" content="KIM YESEUL">
+    <meta property="og:image" content="img/ogimg.png"/> 
+    <meta property="og:title" content="김예슬 포트폴리오" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <title>김예슬 포트폴리오</title>
     <link rel="stylesheet" as="style" crossorigin
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css" />
